objects/wkdw__EmployeeWorkExperienceLink__c.object
<CustomObject>
    <description>Represents a link associated with the work experience of an employee in the Employee Workspace community.</description>
    <fields>
        <fullName>wkdw__Type__c</fullName>
        <description>The type of link.</description>
        <label>Link Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Slack</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                    <default>true</default>
                    <label>Web</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkdw__URL__c</fullName>
        <description>The URL for the portfolio item link.</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wkdw__WorkExperience__c</fullName>
        <description>The portfolio item associated with this portfolio item link.</description>
        <label>Portfolio Item</label>
        <referenceTo>wkdw__EmployeeWorkExperience__c</referenceTo>
        <relationshipLabel>Portfolio Item Links</relationshipLabel>
        <relationshipName>Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Portfolio Item Link</label>
    <listViews>
        <fullName>wkdw__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Item Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>